add payment type
