# db/migrate/20200816164658_create_payment_types.rb
@@ -1,0 +1,8 @@
+class CreatePaymentTypes < ActiveRecord::Migration[6.0]
+  def change
+    create_table :payment_types do |t|
+      t.string :name
+      t.timestamps
+    end
+  end
+end
